k8s/base/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avatar-server
  namespace: gophprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: avatar-server
  template:
    metadata:
      labels:
        app: avatar-server
    spec:
      containers:
        - name: server
          image: gophprofile/server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8085
          command: ["/server"]
