k8s/base/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: gophprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          args:
            - server
            - /data
          ports:
            - containerPort: 9000
            - containerPort: 9001

---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: gophprofile
spec:
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
