k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: avatar-service
  namespace: gophprofile
spec:
  selector:
    app: avatar-server
  ports:
    - port: 80
      targetPort: 8085
  type: ClusterIP
